# BaseConverter

./: .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp
incl/: BaseConverter.hpp  Interface.hpp  base_converter.h  interface.h
src/: BaseConverter.cpp  Interface.cpp  base_converter.cc  interface.cc
tests/: base_converter_test.cc
